# noise2ghost

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  GI_n2i.py  LICENSE  Makefile  README.md  environment.yaml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
conda/: meta.yaml
config/: ruff.toml
data/: toy_xray.tif
examples/: 01_chromosomes_ratio-10_gauss.py
scripts/: gen_credits.py
src/noise2ghost/: __init__.py  __main__.py  algos.py  batch.py  cli.py  debug.py  inr.py  io.py  losses.py  models.py  reconstructions.py  testing.py
src/noise2ghost/models/: __init__.py  config.py  inr.py
tests/: __init__.py  test_cli.py
